--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,5 +8,8 @@ dependencies = [
     "beautifulsoup4>=4.14.3",
     "fastapi>=0.128.0",
     "mcp[cli]>=1.25.0",
+    "playwright>=1.57.0",
+    "selenium>=4.39.0",
+    "undetected-chromedriver>=3.5.5",
     "uvicorn>=0.40.0",
 ]
